Misc: animation direction Changed due to overflow issues

--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 .card {
-    transform: translateX(50px);
+    transform: translateY(50px);
     opacity: 0;
     transition: 300ms;
 }
 
 .card.show {
-    transform: translateX(0);
+    transform: translateY(0);
     opacity: 1;
 }
 
